some styling to help prevent overlapping elements

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -22,5 +22,6 @@ a:link, a:visited, a:hover, a:active, a:focus{
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 5px 5px -5px #333;
-  height: 20vh;
+  height: 15vh;
+  overflow: hidden;
 }
