--- a/my-app/src/components/footer.css
+++ b/my-app/src/components/footer.css
@@ -2,7 +2,7 @@
 
 .footer {
     display: flex;
-    height: 20vh;
+    height: 15vh;
     background-color: #F8F9F9;
     box-shadow: inset 0px 11px 8px -10px #CCC;
 }
