--- a/my-app/src/components/hero.css
+++ b/my-app/src/components/hero.css
@@ -8,7 +8,9 @@
     align-items: center;
     background-color: #FFFFFF;
     color: #4F4F4F;
-    width: 35vw;
+    flex-basis: 40vw;
+
+
 
 }
 .left h3{
@@ -22,6 +24,7 @@
 .myContainer{
     display: flex;
     margin-top: 5%;
+
 
 }
 
