--- a/my-app/src/components/home.css
+++ b/my-app/src/components/home.css
@@ -1,6 +1,6 @@
 .home-container {
     display: flex;
     width: 100%;
-    height: 60vh;
+    height: 70vh;
 
 }
